k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: oficina
  labels:
    app.kubernetes.io/name: oficina-mvp
