k8s/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: oficina-postgres
  namespace: oficina
  labels:
    app.kubernetes.io/name: oficina-postgres
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: oficina-postgres
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
