k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: oficina-api
  namespace: oficina
  labels:
    app.kubernetes.io/name: oficina-api
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: oficina-api
  ports:
    - name: http
      port: 80
      targetPort: 8080
